parser/tests/cases/snapshots/cases__parse_ast__guest_book.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(guest_book), module::parse_module,\n           r#\"\ntype BookMsg = bytes[100]\n\ncontract GuestBook:\n    pub guest_book: map<address, BookMsg>\n\n    event Signed:\n        idx book_msg: BookMsg\n\n    pub def sign(book_msg: BookMsg):\n        self.guest_book[msg.sender] = book_msg\n\n        emit Signed(book_msg=book_msg)\n\n    pub def get_msg(addr: address) -> BookMsg:\n        return self.guest_book[addr]\n\"#)"

---
Node(
  kind: Module(
    body: [
      Node(
        kind: TypeDef(
          name: Node(
            kind: "BookMsg",
            span: Span(
              start: 6,
              end: 13,
            ),
          ),
          typ: Node(
            kind: Array(
              typ: Node(
                kind: Base(
                  base: "bytes",
                ),
                span: Span(
                  start: 16,
                  end: 21,
                ),
              ),
              dimension: 100,
            ),
            span: Span(
              start: 16,
              end: 26,
            ),
          ),
        ),
        span: Span(
          start: 1,
          end: 26,
        ),
      ),
      Node(
        kind: ContractDef(
          name: Node(
            kind: "GuestBook",
            span: Span(
              start: 37,
              end: 46,
            ),
          ),
          fields: [
            Node(
              kind: Field(
                pub_qual: Some(Node(
                  kind: PubQualifier(),
                  span: Span(
                    start: 52,
                    end: 55,
                  ),
                )),
                const_qual: None,
                name: Node(
                  kind: "guest_book",
                  span: Span(
                    start: 56,
                    end: 66,
                  ),
                ),
                typ: Node(
                  kind: Generic(
                    base: Node(
                      kind: "map",
                      span: Span(
                        start: 68,
                        end: 71,
                      ),
                    ),
                    args: [
                      Node(
                        kind: TypeDesc(Base(
                          base: "address",
                        )),
                        span: Span(
                          start: 72,
                          end: 79,
                        ),
                      ),
                      Node(
                        kind: TypeDesc(Base(
                          base: "BookMsg",
                        )),
                        span: Span(
                          start: 81,
                          end: 88,
                        ),
                      ),
                    ],
                  ),
                  span: Span(
                    start: 68,
                    end: 89,
                  ),
                ),
                value: None,
              ),
              span: Span(
                start: 52,
                end: 89,
              ),
            ),
          ],
          body: [
            Node(
              kind: EventDef(
                name: Node(
                  kind: "Signed",
                  span: Span(
                    start: 101,
                    end: 107,
                  ),
                ),
                fields: [
                  Node(
                    kind: EventField(
                      idx_qual: Some(Node(
                        kind: IdxQualifier(),
                        span: Span(
                          start: 117,
                          end: 120,
                        ),
                      )),
                      name: Node(
                        kind: "book_msg",
                        span: Span(
                          start: 121,
                          end: 129,
                        ),
                      ),
                      typ: Node(
                        kind: Base(
                          base: "BookMsg",
                        ),
                        span: Span(
                          start: 131,
                          end: 138,
                        ),
                      ),
                    ),
                    span: Span(
                      start: 117,
                      end: 138,
                    ),
                  ),
                ],
              ),
              span: Span(
                start: 95,
                end: 138,
              ),
            ),
            Node(
              kind: FuncDef(
                pub_qual: Some(Node(
                  kind: PubQualifier(),
                  span: Span(
                    start: 144,
                    end: 147,
                  ),
                )),
                name: Node(
                  kind: "sign",
                  span: Span(
                    start: 152,
                    end: 156,
                  ),
                ),
                args: [
                  Node(
                    kind: FuncDefArg(
                      name: Node(
                        kind: "book_msg",
                        span: Span(
                          start: 157,
                          end: 165,
                        ),
                      ),
                      typ: Node(
                        kind: Base(
                          base: "BookMsg",
                        ),
                        span: Span(
                          start: 167,
                          end: 174,
                        ),
                      ),
                    ),
                    span: Span(
                      start: 157,
                      end: 174,
                    ),
                  ),
                ],
                return_type: None,
                body: [
                  Node(
                    kind: Assign(
                      target: Node(
                        kind: Subscript(
                          value: Node(
                            kind: Attribute(
                              value: Node(
                                kind: Name("self"),
                                span: Span(
                                  start: 185,
                                  end: 189,
                                ),
                              ),
                              attr: Node(
                                kind: "guest_book",
                                span: Span(
                                  start: 190,
                                  end: 200,
                                ),
                              ),
                            ),
                            span: Span(
                              start: 185,
                              end: 200,
                            ),
                          ),
                          index: Node(
                            kind: Attribute(
                              value: Node(
                                kind: Name("msg"),
                                span: Span(
                                  start: 201,
                                  end: 204,
                                ),
                              ),
                              attr: Node(
                                kind: "sender",
                                span: Span(
                                  start: 205,
                                  end: 211,
                                ),
                              ),
                            ),
                            span: Span(
                              start: 201,
                              end: 211,
                            ),
                          ),
                        ),
                        span: Span(
                          start: 185,
                          end: 212,
                        ),
                      ),
                      value: Node(
                        kind: Name("book_msg"),
                        span: Span(
                          start: 215,
                          end: 223,
                        ),
                      ),
                    ),
                    span: Span(
                      start: 185,
                      end: 223,
                    ),
                  ),
                  Node(
                    kind: Emit(
                      name: Node(
                        kind: "Signed",
                        span: Span(
                          start: 238,
                          end: 244,
                        ),
                      ),
                      args: Node(
                        kind: [
                          Node(
                            kind: Kwarg(Kwarg(
                              name: Node(
                                kind: "book_msg",
                                span: Span(
                                  start: 245,
                                  end: 253,
                                ),
                              ),
                              value: Node(
                                kind: Name("book_msg"),
                                span: Span(
                                  start: 254,
                                  end: 262,
                                ),
                              ),
                            )),
                            span: Span(
                              start: 245,
                              end: 262,
                            ),
                          ),
                        ],
                        span: Span(
                          start: 244,
                          end: 263,
                        ),
                      ),
                    ),
                    span: Span(
                      start: 233,
                      end: 263,
                    ),
                  ),
                ],
              ),
              span: Span(
                start: 144,
                end: 263,
              ),
            ),
            Node(
              kind: FuncDef(
                pub_qual: Some(Node(
                  kind: PubQualifier(),
                  span: Span(
                    start: 269,
                    end: 272,
                  ),
                )),
                name: Node(
                  kind: "get_msg",
                  span: Span(
                    start: 277,
                    end: 284,
                  ),
                ),
                args: [
                  Node(
                    kind: FuncDefArg(
                      name: Node(
                        kind: "addr",
                        span: Span(
                          start: 285,
                          end: 289,
                        ),
                      ),
                      typ: Node(
                        kind: Base(
                          base: "address",
                        ),
                        span: Span(
                          start: 291,
                          end: 298,
                        ),
                      ),
                    ),
                    span: Span(
                      start: 285,
                      end: 298,
                    ),
                  ),
                ],
                return_type: Some(Node(
                  kind: Base(
                    base: "BookMsg",
                  ),
                  span: Span(
                    start: 303,
                    end: 310,
                  ),
                )),
                body: [
                  Node(
                    kind: Return(
                      value: Some(Node(
                        kind: Subscript(
                          value: Node(
                            kind: Attribute(
                              value: Node(
                                kind: Name("self"),
                                span: Span(
                                  start: 327,
                                  end: 331,
                                ),
                              ),
                              attr: Node(
                                kind: "guest_book",
                                span: Span(
                                  start: 332,
                                  end: 342,
                                ),
                              ),
                            ),
                            span: Span(
                              start: 327,
                              end: 342,
                            ),
                          ),
                          index: Node(
                            kind: Name("addr"),
                            span: Span(
                              start: 343,
                              end: 347,
                            ),
                          ),
                        ),
                        span: Span(
                          start: 327,
                          end: 348,
                        ),
                      )),
                    ),
                    span: Span(
                      start: 320,
                      end: 348,
                    ),
                  ),
                ],
              ),
              span: Span(
                start: 269,
                end: 348,
              ),
            ),
          ],
        ),
        span: Span(
          start: 28,
          end: 348,
        ),
      ),
    ],
  ),
  span: Span(
    start: 1,
    end: 348,
  ),
)
