parser/tests/cases/snapshots/cases__parse_ast__import_simple.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(import_simple), module::parse_simple_import,\n           \"import foo as bar, baz, bing as bop\")"

---
Node(
  kind: SimpleImport(
    names: [
      Node(
        kind: SimpleImportName(
          path: [
            Node(
              kind: "foo",
              span: Span(
                start: 7,
                end: 10,
              ),
            ),
          ],
          alias: Some(Node(
            kind: "bar",
            span: Span(
              start: 14,
              end: 17,
            ),
          )),
        ),
        span: Span(
          start: 7,
          end: 17,
        ),
      ),
      Node(
        kind: SimpleImportName(
          path: [
            Node(
              kind: "baz",
              span: Span(
                start: 19,
                end: 22,
              ),
            ),
          ],
          alias: None,
        ),
        span: Span(
          start: 19,
          end: 22,
        ),
      ),
      Node(
        kind: SimpleImportName(
          path: [
            Node(
              kind: "bing",
              span: Span(
                start: 24,
                end: 28,
              ),
            ),
          ],
          alias: Some(Node(
            kind: "bop",
            span: Span(
              start: 32,
              end: 35,
            ),
          )),
        ),
        span: Span(
          start: 24,
          end: 35,
        ),
      ),
    ],
  ),
  span: Span(
    start: 0,
    end: 35,
  ),
)
