parser/tests/cases/snapshots/cases__parse_ast__ops_math.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(ops_math), expressions::parse_expr,\n           \"a + b * -c ** d / e % f\")"

---
Node(
  kind: BinOperation(
    left: Node(
      kind: Name("a"),
      span: Span(
        start: 0,
        end: 1,
      ),
    ),
    op: Node(
      kind: Add,
      span: Span(
        start: 2,
        end: 3,
      ),
    ),
    right: Node(
      kind: BinOperation(
        left: Node(
          kind: BinOperation(
            left: Node(
              kind: BinOperation(
                left: Node(
                  kind: Name("b"),
                  span: Span(
                    start: 4,
                    end: 5,
                  ),
                ),
                op: Node(
                  kind: Mult,
                  span: Span(
                    start: 6,
                    end: 7,
                  ),
                ),
                right: Node(
                  kind: UnaryOperation(
                    op: Node(
                      kind: USub,
                      span: Span(
                        start: 8,
                        end: 9,
                      ),
                    ),
                    operand: Node(
                      kind: BinOperation(
                        left: Node(
                          kind: Name("c"),
                          span: Span(
                            start: 9,
                            end: 10,
                          ),
                        ),
                        op: Node(
                          kind: Pow,
                          span: Span(
                            start: 11,
                            end: 13,
                          ),
                        ),
                        right: Node(
                          kind: Name("d"),
                          span: Span(
                            start: 14,
                            end: 15,
                          ),
                        ),
                      ),
                      span: Span(
                        start: 9,
                        end: 15,
                      ),
                    ),
                  ),
                  span: Span(
                    start: 8,
                    end: 15,
                  ),
                ),
              ),
              span: Span(
                start: 4,
                end: 15,
              ),
            ),
            op: Node(
              kind: Div,
              span: Span(
                start: 16,
                end: 17,
              ),
            ),
            right: Node(
              kind: Name("e"),
              span: Span(
                start: 18,
                end: 19,
              ),
            ),
          ),
          span: Span(
            start: 4,
            end: 19,
          ),
        ),
        op: Node(
          kind: Mod,
          span: Span(
            start: 20,
            end: 21,
          ),
        ),
        right: Node(
          kind: Name("f"),
          span: Span(
            start: 22,
            end: 23,
          ),
        ),
      ),
      span: Span(
        start: 4,
        end: 23,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 23,
  ),
)
